# library

./: .env  .gitignore  README.md  pyproject.toml
core/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_autor_foto_alter_libro_portada_and_more.py
